--- a/README.Rmd
+++ b/README.Rmd
@@ -75,7 +75,17 @@ Setup Github Actions to update documentation upon `git push` into `gh-pages` bra
 usethis::use_github_action("pkgdown")
 ```
 
-Modified the [.github/workflows/pkgdown.yaml](https://github.com/marinebon/ecoidx/blame/8095d4a294e41987b039ab80e2791757dd37eb8c/.github/workflows/pkgdown.yaml#L38-L49) to run `devtools::document()` before `pkgdown::build_site()` with 2 lines highlighted.
+Modified the [.github/workflows/pkgdown.yaml](https://github.com/marinebon/ecoidx/blame/5b1b44104029fbc167146b9037b0030db390f774/.github/workflows/pkgdown.yaml#L38-L50) with 3 extra lines to fully document the package from source:
+
+```yaml
+    - name: Install dependencies
+      ...
+          install.packages("devtools", type = "binary")
+    - name: Deploy package
+      ...
+          Rscript -e 'devtools::document()'
+          Rscript -e 'rmarkdown::render("README.Rmd")'
+```
 
 ### Load dataset
 
